# alfiebot_ws

./: .gitignore  CLAUDE.md  LICENSE  README.md  SETUP.md
.github/: copilot-instructions.md
alfienet/: HOWTO.md  QUICKREF.sh  alfienet.sh
data/alfiebot.CanDoChallenge/meta/: episodes.jsonl  info.json  info.jsonl  modality.json  modality.jsonl  relative_stats.jsonl  stats.jsonl  tasks.jsonl
src/alfie_agent/: package.xml  setup.cfg  setup.py
src/alfie_asr/: package.xml  setup.cfg  setup.py
src/alfie_asr/alfie_asr/: asr_node.py  asr_node_local.py  model_manager.py  parakeet_asr_node.py
src/alfie_back/: package.xml  setup.cfg  setup.py
src/alfie_back/alfie_back/: back_node.py  initshoulder.py
src/alfie_bringup/: MANIFEST.in  README.md  package.xml  setup.cfg  setup.py  test_gstreamer_hw.sh  test_nvjpegenc.sh
src/alfie_bringup/alfie_bringup/: cert.pem  gstreamer_camera_node.py  gstreamer_camera_node_hw.py  jetson_stats.py  key.pem  master_cmd.py  master_status.py  master_topics.py  master_watchdog.md  master_watchdog.py  servo_config.py  watchdog_checks.md  watchdog_checks.py
src/alfie_bringup/certs/: cert.pem  key.pem
src/alfie_bringup/launch/: alfie_bringup.py  alfie_camera.launch.py  alfie_launch.py  alfie_rgbd_pcl.launch.py  rgbd.yaml
src/alfie_bringup/resource/: sample robotlowcmds.txt
src/alfie_bringup/test/: testrobotlowcmd.py
src/alfie_firmware/: CMakeLists.txt  COLCON_IGNORE  README.md  platformio.ini  reset_driver_boards.sh  setup.cfg  setup.py
src/alfie_firmware/picobackdriver/: README.md  platformio.ini
src/alfie_firmware/picobackdriver/extra_packages/alfie_msgs/: CMakeLists.txt  package.xml
src/alfie_firmware/picobackdriver/extra_packages/alfie_msgs/msg/: BackCmd.msg  BackState.msg
src/alfie_firmware/picomecanumdriver/: platformio.ini
src/alfie_firmware/ref/: main copy.txt_002  main copy.txt_003  main copy.txt_004  main copy.txt_005_minimal_sync_poc  main copy.txt_006  main copy.txt_007  main copy.txt_008  main copy.txt_009  main copy.txt_010  main copy.txt_012  main copy.txt_013 updated minimal sync  main.txt
src/alfie_firmware/rp2040driver/: README.md  platformio.ini
src/alfie_firmware/rp2040mecanum/: README.md  fix_atomic.py
src/alfie_firmware/src/: commandstruct.h  config.h  driverboard.h  imu_control.cpp  imu_control.h  main.cpp  memorystruct.h  motor_control.cpp  motor_control.h  ros_control.cpp  ros_control.h  rosutils.h  servo_control.cpp  servo_control.h  shoulder_control.h  statusstruct.h  utils.h
src/alfie_gr00t/: DATA_COLLECTION.md  GROOT_CLIENT.md  GROOT_SERVER.md  PHASE2_SUMMARY.md  QUICK_REFERENCE.md  README.md  package.xml  setup.cfg  setup.py
src/alfie_gr00t/alfie_gr00t/: alfiebot_config.py
src/alfie_gr00t/alfie_gr00t/core/: __init__.py  action_publisher.py  normalization.py  observation_bridge.py  zmq_client.py
src/alfie_gr00t/alfie_gr00t/nodes/: data_recorder.py  groot_client.py  groot_server.py
src/alfie_gr00t/alfie_gr00t/utils/: __init__.py  safety.py
src/alfie_gr00t/config/: groot_client.yaml  groot_server.yaml
src/alfie_gr00t/launch/: capture_training.py  data_collection.launch.py  groot_inference.launch.py
src/alfie_gr00t/scripts/: annotate_demo.py  check_topics.sh  record_demo.sh  rosbag_to_groot.py  update_task_index.py
src/alfie_llm/: package.xml  setup.cfg  setup.py
src/alfie_mic/: package.xml  setup.cfg  setup.py
src/alfie_msgs/: CMakeLists.txt  package.xml
src/alfie_msgs/msg/: ASRResult.msg  AudioFrame.msg  BackCmd.msg  BackState.msg  DriverDiagnostics.msg  DriverState.msg  GDBDiagnostics.msg  GDBMagneticField.msg  GDBMotorState.msg  GDBServoMemoryMap.msg  GDBServoState.msg  GDBState.msg  Imu.msg  JetsonState.msg  RobotLowCmd.msg  RobotLowState.msg  ServoCmd.msg  ServoMemoryMap.msg  ServoState.msg  Speaking.msg  SpeechRequest.msg
src/alfie_msgs/srv/: ServoService.srv
src/alfie_tools/: REFACTORING_COMPLETE.md  REFACTORING_NOTES.md  package.xml  setup.cfg  setup.py
src/alfie_tts/: package.xml  setup.cfg  setup.py
src/alfie_urdf/: package.xml  setup.cfg  setup.py
src/alfie_urdf/urdf/: alfiebot.urdf
src/alfie_vr/: CERTIFICATES.md  README.md  package.xml  requirements.txt  setup.cfg  setup.py
systemd/: FOXGLOVE-PROXY.md  QUICKSTART.sh  README.md  alfie-control.sh  alfie.service  foxglove-proxy.conf  install.sh  uninstall.sh
(+204 files in other folders)
