<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>alfie_gr00t</name>
  <version>0.0.0</version>
  <description>NVIDIA GR00T n1.6 integration for Alfie robotics platform</description>
  <maintainer email="alansrobotlab@gmail.com">alfie</maintainer>
  <license>Apache-2.0</license>

  <!-- Runtime dependencies -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>alfie_msgs</exec_depend>
  <exec_depend>message_filters</exec_depend>
  <exec_depend>cv_bridge</exec_depend>

  <!-- Python dependencies (install via pip: pyzmq, msgpack, numpy, opencv-python) -->

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
